# Samplepython4

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
secure/: crypto.py  file_crypto.py
tests/: test_file_crypto.py
tools/: README_tools.md  decrypt_demo_file.py  encrypt_demo_file.py  generate_and_encrypt_demo_file.py  generate_fake_sensitive_file.py
