[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samplepython4"
version = "0.1.0"
description = "Samplepython4"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.6",
  "cryptography==43.0.3",
  "passlib[argon2]==1.7.4",
  "argon2-cffi==23.1.0",
  "pydantic==2.9.2",
  "starlette==0.41.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["secure*"]
